tests/NormalTests/paczka1/fuzzy1/45020558.err
Error in line 2: S33 A56 7,4
Error in line 1: o1EFOJ A56 54,0
Error in line 28: MrkpATHTU A115 73,5
